--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang=cs dir="ltr">
   <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-    
+    <p>Ahoj všichni</p>
   </body>
 </html>
